# polyglot-journey

./: .gitignore  README.md
Go/company_db/: README.md
Go/hello_go/: bmi_test.go  countString_test.go  fibo.go  fibo_test.go  fizzbuzz.go  fizzbuzz_test.go  go.mod  loan.go  loan_test.go  main.go  make_hash.go  make_hash_test.go  prime.go  prime_test.go  router.go
JS/addition-app/: package-lock.json  package.json
Python/asyncOverhead/: benchmark_function.py  benchmark_sequential.py  main.py  pyproject.toml
Python/computationalCost/: hello.py  (+1 more)
Python/m1_problem/: README.md  pyproject.toml
Python/m1_problem/app/: main.py
Python/m1_problem/app/db/: database.py
Python/m1_problem/app/models/: models.py
Python/m1_problem/app/schemas/: schemas.py
Python/useRedis/: README.md  docker-compose.yml  init_db.py  pyproject.toml
Python/useRedis/app/: config.py  get_cache.py  main.py
Python/useRedis/app/db/: database.py  deps.py
Python/useRedis/app/models/: company.py  postal_code.py  prefecture.py
Python/useRedis/app/schemas/: company.py  postal_code.py  prefecture.py
Python/useRedis/initial_data/: api_insert_postal_codes.py  api_insert_prefectures.py  fix_postal_code.py  fix_postal_code_api.py  init_table.sql
Rust/hello_actix_web/: Cargo.toml
Rust/hello_actix_web/src/: fizzbuzz.rs  four_arithmetic_operations.rs  hash_check.rs  lib.rs  loan.rs  main.rs  models.rs  prime.rs
Rust/hello_actix_web/tests/: char_count_test.rs  fizzbuzz_endpoint_test.rs  fizzbuzz_test.rs  four_arithmetic_operations_test.rs  hash_test.rs  loan_test.rs  prime_test.rs
(+80 files in other folders)
