[project]
name = "m1-problem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.41",
    "sqltap>=0.3.11",
    "uvicorn[standard]>=0.34.3",
]
