[package]
name = "hello_actix_web"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_actix_web"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
bcrypt = "0.17.0"
meval = "0.2.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
urlencoding = "2.1.3"
